load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "mypy",
    srcs = ["mypy.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "py_type_library",
    srcs = ["py_type_library.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "types",
    srcs = ["types.bzl"],
    visibility = ["//visibility:public"],
)
