load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(
    name = "generate_requirements_lock",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

create_venv(
    name = "venv",
    requirements_txt = "requirements.txt",
)

bzl_library(
    name = "py",
    srcs = ["py.bzl"],
    deps = [
        "@pip_types//:types",
        "@rules_mypy//mypy",
    ],
)
