load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(
    name = "generate_requirements_lock",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

create_venv(
    name = "venv",
    requirements_txt = "requirements.txt",
)
