load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")
load(":mypy.bzl", "mypy_cli")

exports_files([
    "mypy_runner.py",
    "default_mypy.ini",
])

bzl_library(
    name = "mypy_rules",
    srcs = ["mypy.bzl"],
    visibility = ["//mypy:__subpackages__"],
)

pip_compile(
    name = "generate_requirements_lock",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

create_venv(
    name = "venv",
    requirements_txt = "requirements.txt",
)

mypy_cli(name = "mypy")
