load("@rules_python//python:py_library.bzl", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        ":stubs",
    ],
)

genrule(
    name = "generate_stubs",
    outs = ["stubs.pyi"],
    cmd = "echo 'STUB = 0' > $(OUTS)",
)

py_library(
    name = "stubs",
    imports = [".."],
    pyi_srcs = [":generate_stubs"],
)
