load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "lib",
    srcs = glob(["lib/**/*.py"]),
    deps = [
        # actual dependency here doesn't matter, we just need some dependency
        # to implicitly provide stubs for; see `py.bzl` for the hook-up
        requirement("six"),
    ],
)

py_library(
    name = "foo-stubs",
    imports = ["."],
    pyi_srcs = glob(["foo/**/*.pyi"]),
    visibility = ["//visibility:public"],
)
