load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "b",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//thm",
        "//thm/a",
        requirement("cachetools"),
        requirement("numpy"),
    ],
)
